# Ai-OPS-part-1

./: .gitignore  README.md  pipeline.py  pred_vs_actual.csv  pyproject.toml  test.ipynb
